# golf-league-app

./: .env  .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .gitignore  README.md  __version__.py  app.py  pyproject.toml
backend/api/: routes.py
backend/backend/: app.py
backend/backend/api/: routes.py
backend/backend/database/: golf_league.db
backend/backend/golf_league_backend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/backend/storage/: __init__.py  base.py  mariadb_storage.py  sqlite_storage.py
backend/database/: golf_league.db
backend/storage/: __init__.py  base.py  sqlite_storage.py
docker/: docker-compose.yaml
src/: App.jsx
src/api/: client.js  config.js  dataService.js
src/components/: CourseEditor.jsx  ErrorBoundary.jsx  Layout.jsx  PlayerEditor.jsx  ScoreCard.jsx  StandingsTable.jsx
src/data/: mockData.js
src/pages/: Admin.jsx  Courses.jsx  Home.jsx  MatchEntry.jsx  Schedule.jsx  Standings.jsx
src/utils/: golfLogic.js
